# my_rust_os

./: .gitignore  Cargo.toml  README.md  build_and_launch.ps1  commands.txt  things_I_learned_about_rust.txt
bare_bones/: commands.txt
bare_bones/rust_os/: Cargo.toml
bare_bones/rust_os/src/: interrupts.rs  main.rs  vga_buffer.rs
other/: build_and_launch.ps1
src/: gdt.rs  interrupts.rs  main.rs  memory.rs
