[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"    # library of bootloader, which loads our kernel
                        # library also compiles the loader+kernel to an ELF executable
volatile = "0.2.6"      # adds volatile feature
spin = "0.5.2"          # implements a basic mutex
x86_64 = "0.14.2"       # provides x86_64-specific functions & register access
pic8259 = "0.10.1"      # functions that program the controller which handles
                        # hardware interrupts and sends them to the CPU

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
